# ckanext-s3-exporter

./: MANIFEST.in  README.md  setup.cfg  test.ini
.github/workflows/: test.yml
ckanext/s3_exporter/: ckan_dataset.yaml  cli.py  config_declaration.yaml  const.py  plugin.py  presets.yaml  utils.py  views.py
ckanext/s3_exporter/assets/: script.js  webassets.yml
ckanext/s3_exporter/logic/: action.py  auth.py  schema.py  validators.py
ckanext/s3_exporter/tests/: test_plugin.py
