[metadata]
name = ckanext-s3-exporter
version = 0.0.1
description = An extension that generates a one-time login link for a user
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/DataShades/ckanext-s3-exporter
author = LinkDigital
author_email = 
license = AGPL
classifiers =
            Development Status :: 4 - Beta
            License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
            Programming Language :: Python :: 3.8
            Programming Language :: Python :: 3.9
            Programming Language :: Python :: 3.10
keywords = CKAN

[options]
packages = find:
namespace_packages = ckanext
install_requires =
include_package_data = True

[options.entry_points]
ckan.plugins =
             s3_exporter = ckanext.s3_exporter.plugin:S3ExporterPlugin

babel.extractors =
                 ckan = ckan.lib.extract:extract_ckan

[options.extras_require]

[extract_messages]
keywords = translate isPlural
add_comments = TRANSLATORS:
output_file = ckanext/s3_exporter/i18n/ckanext-s3_exporter.pot
width = 80

[init_catalog]
domain = ckanext-s3_exporter
input_file = ckanext/s3_exporter/i18n/ckanext-s3_exporter.pot
output_dir = ckanext/s3_exporter/i18n

[update_catalog]
domain = ckanext-s3_exporter
input_file = ckanext/s3_exporter/i18n/ckanext-s3_exporter.pot
output_dir = ckanext/s3_exporter/i18n
previous = true

[compile_catalog]
domain = ckanext-s3_exporter
directory = ckanext/s3_exporter/i18n
statistics = true

[tool:pytest]
filterwarnings =
        ignore::sqlalchemy.exc.SADeprecationWarning
        ignore::sqlalchemy.exc.SAWarning
        ignore::DeprecationWarning
addopts = --ckan-ini test.ini
